// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmPassword should display initial state 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth css-sg07kc-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required css-rnc4nv-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      newPassword.label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="InputText__Wrapper css-17fp4jk"
    >
      <div
        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-33c5sc-MuiInputBase-root"
        required=""
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input css-ngazp5-MuiInputBase-input"
          data-testid="inputText"
          required=""
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth css-sg07kc-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required css-rnc4nv-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      confirmPassword.label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="InputText__Wrapper css-17fp4jk"
    >
      <div
        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-33c5sc-MuiInputBase-root"
        required=""
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input css-ngazp5-MuiInputBase-input"
          data-testid="inputText"
          required=""
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmPassword should display with different labels 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth css-sg07kc-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required css-rnc4nv-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      Other password label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="InputText__Wrapper css-17fp4jk"
    >
      <div
        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-33c5sc-MuiInputBase-root"
        required=""
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input css-ngazp5-MuiInputBase-input"
          data-testid="inputText"
          required=""
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth css-sg07kc-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required css-rnc4nv-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      Other confirm password label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="InputText__Wrapper css-17fp4jk"
    >
      <div
        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-33c5sc-MuiInputBase-root"
        required=""
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input css-ngazp5-MuiInputBase-input"
          data-testid="inputText"
          required=""
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmPassword should not display error with showError prop when the password are the same 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth css-sg07kc-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required css-rnc4nv-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      newPassword.label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="InputText__Wrapper css-17fp4jk"
    >
      <div
        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1jf161a-MuiInputBase-root"
        required=""
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input css-ngazp5-MuiInputBase-input"
          data-testid="inputText"
          required=""
          type="password"
          value="aPassword"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth css-sg07kc-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required css-rnc4nv-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      confirmPassword.label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="InputText__Wrapper css-17fp4jk"
    >
      <div
        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1jf161a-MuiInputBase-root"
        required=""
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input css-ngazp5-MuiInputBase-input"
          data-testid="inputText"
          required=""
          type="password"
          value="aPassword"
        />
      </div>
    </div>
  </div>
</div>
`;
